# ouroboros

./: .gitignore  BIBLE.md  README.md  colab_launcher.py  discord_monitor_main.py  identity.md  pyproject.toml  scout_social_strategy.docx  x402scoutroute-project-outline.md  x402scoutspend-project-outline.md
.github/workflows/: keep-alive.yml
agent_economy/discord_monitor/: Dockerfile  README.md  __init__.py  bot.py  config.py  main.py  requirements.txt
agent_economy/discovery_api/: ADOPTION.md  CONTRIBUTING.md  README.md  SPEC.md  attestation.py  db.py  ecosystem_scraper.py  erc8004.py  fastmcp_server.py  health.db  landing.py  main.py  mcp_streamable.py  mcp_transport.py  oauth.py  registry.json  registry_seed.json  registry_utils.py  render.yaml  requirements.txt  scraper.py  smithery.yaml
agent_economy/discovery_api/examples/: 01_raw_api_browse.py  02_raw_api_discover.py  03_langchain_agent.py  04_autogen_x402.py  05_crewai_x402.py  06_well_known_cache.py  07_report_feedback.py  08_mcp_walkthrough.py  09_health_monitor.py  10_register_service.py  11_langchain_research_agent.py  12_price_comparison.py  13_autonomous_api_router.py  14_stackoverflow_template.md  15_agentkit_integration.py
agent_economy/discovery_api/mcp/: .dockerignore  Dockerfile  README.md  mcp_server.py  requirements.txt  x402_gateway.py
agent_economy/discovery_api/plugins/autogen/: README.md  setup.py
agent_economy/discovery_api/plugins/autogen-x402-discovery/: README.md  pyproject.toml
agent_economy/discovery_api/plugins/autogen-x402-discovery/autogen_x402_discovery/: __init__.py  tool.py
agent_economy/discovery_api/plugins/autogen/x402discovery_autogen/: __init__.py
agent_economy/discovery_api/plugins/crewai/: README.md  setup.py
agent_economy/discovery_api/plugins/crewai-x402-discovery/: README.md  pyproject.toml
agent_economy/discovery_api/plugins/crewai-x402-discovery/crewai_x402_discovery/: __init__.py  tool.py
agent_economy/discovery_api/plugins/crewai/x402discovery_crewai/: __init__.py
agent_economy/discovery_api/plugins/langchain/: README.md  setup.py
agent_economy/discovery_api/plugins/langchain-x402-discovery/: README.md  pyproject.toml
agent_economy/discovery_api/plugins/langchain-x402-discovery/langchain_x402_discovery/: __init__.py  tool.py
agent_economy/discovery_api/plugins/langchain/x402discovery_langchain/: __init__.py
agent_economy/discovery_api/plugins/llama-index-x402-discovery/: README.md  pyproject.toml
agent_economy/discovery_api/plugins/llama-index-x402-discovery/llama_index_x402_discovery/: __init__.py  tool.py
agent_economy/discovery_api/plugins/llama_index/: README.md  setup.py
agent_economy/discovery_api/plugins/llama_index/x402discovery_llama/: __init__.py
agent_economy/discovery_api/sdk/agentkit/: README.md  pyproject.toml
agent_economy/discovery_api/sdk/agentkit/agentkit_x402_discovery/: __init__.py  provider.py
agent_economy/discovery_api/sdk/python/: LICENSE  README.md  pyproject.toml  setup.py
agent_economy/discovery_api/sdk/python/x402discovery/: __init__.py  client.py  exceptions.py
agent_economy/scoutgate/: README.md  main.py  requirements.txt
agent_economy/social/: README.md  __init__.py  config.py  content_library.py  discord_poster.py  scheduler.py  state.py  x_poster.py
docs/: demo.html  index.html  privacy.md  terms.md
ouroboros/: agent.py  consciousness.py  context.py  llm.py  loop.py  pricing.py
ouroboros/tools/: control.py  mail_monitor.py  search.py  social_media_tool.py
prompts/: CONSCIOUSNESS.md
supervisor/: git_ops.py  state.py
tests/: test_smoke.py
