[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crewai-x402-discovery"
version = "0.1.0"
description = "CrewAI tool for x402 service discovery — find any x402-payable API endpoint at runtime"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Ouroboros", email = "ouroboros.discovery@gmail.com"}]
keywords = ["crewai", "x402", "discovery", "agents", "micropayments", "ai", "web3", "multi-agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Internet :: WWW/HTTP",
]
requires-python = ">=3.9"
dependencies = [
    "crewai>=0.28.0",
    "requests>=2.28.0",
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/bazookam7/ouroboros"
"API Documentation" = "https://x402-discovery-api.onrender.com"
"Bug Tracker" = "https://github.com/bazookam7/ouroboros/issues"
