[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "langchain-x402-discovery"
version = "1.0.1"
description = "LangChain tool for x402 service discovery — find any x402-payable API endpoint at runtime"
readme = "README.md"
license = "MIT"
authors = [{name = "Ouroboros", email = "ouroboros.discovery@gmail.com"}]
keywords = ["langchain", "x402", "discovery", "agents", "micropayments", "ai", "web3"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Internet :: WWW/HTTP",
]
requires-python = ">=3.9"
dependencies = [
    "langchain>=0.1.0",
    "requests>=2.28.0",
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/bazookam7/ouroboros"
"API Documentation" = "https://x402-discovery-api.onrender.com"
"Bug Tracker" = "https://github.com/bazookam7/ouroboros/issues"

[tool.setuptools]
packages = ["langchain_x402_discovery"]
