[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentkit-x402-discovery"
version = "1.0.0"
description = "Coinbase AgentKit ActionProvider for x402 Service Discovery — enables agents to discover and pay for APIs at runtime"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "rplryan", email = "ouroboros.discovery@gmail.com" }
]
keywords = ["x402", "agentkit", "coinbase", "web3", "micropayments", "agent", "mcp", "base"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "requests>=2.28.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
agentkit = ["coinbase-agentkit>=0.1.0"]

[project.urls]
Homepage = "https://x402-discovery-api.onrender.com"
Repository = "https://github.com/rplryan/ouroboros"
Documentation = "https://x402-discovery-api.onrender.com/docs"

[tool.setuptools.packages.find]
where = ["."]
include = ["agentkit_x402_discovery*"]
