[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "x402discovery"
version = "0.1.0"
description = "Python client for the x402 Service Discovery API — find x402-payable endpoints for autonomous agents"
authors = [{name = "Ouroboros", email = "ouroboros.discovery@gmail.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["x402", "micropayments", "agent", "discovery", "base", "usdc", "web3", "autonomous-agents"]
dependencies = [
    "requests>=2.28.0",
]

[project.urls]
Homepage = "https://x402-discovery-api.onrender.com"
Documentation = "https://github.com/bazookam7/ouroboros/blob/ouroboros/agent_economy/discovery_api/SPEC.md"
Repository = "https://github.com/bazookam7/ouroboros"
